# LocusMesh

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: delivery-contract.md  market-scan.md  runbook.md  threat-model.md
docs/adr/: 0001-admission-evidence-boundary.md  0002-read-only-fabric-observation.md
scripts/: smoke_installed_observer.py
src/locusmesh/: __init__.py  __main__.py  attestation.py  canonical.py  cli.py  crypto.py  demo.py  io.py  models.py  policy.py  ports.py  replay.py  schema_export.py
src/locusmesh/adapters/: __init__.py  fixture.py  local_signer.py  mesh_llm.py
tests/: conftest.py  test_attestation.py  test_cli_adapters.py  test_mesh_llm_observer.py  test_models_crypto.py  test_policy.py
tests/fixtures/: plan.json  policy.yaml  topology.json
