[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "locusmesh"
version = "0.1.0a1"
description = "Fail-closed locality policy and signed route evidence for distributed AI"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Antonio Antenore", email = "ant_ant95@hotmail.it" },
]
dependencies = [
  "cryptography>=48.0.1,<49",
  "pydantic>=2.11,<3",
  "PyYAML>=6.0.2,<7",
]

[project.scripts]
locusmesh = "locusmesh.cli:main"

[dependency-groups]
dev = [
  "hatchling==1.31.0",
  "mypy>=1.16,<2",
  "pip-audit>=2.9,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<0.15",
  "types-PyYAML>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/locusmesh"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["locusmesh"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=locusmesh --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["locusmesh"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
